Criei Java script e main

--- a/index.html
+++ b/index.html
@@ -19,14 +19,31 @@
         <img src="img/logo.svg" alt="Logotipo da HZC" class="cabecalho_logo">
         <button class="cabecalho_notificacao" aria-label="Notificação"><i></i></button>
     </header>
-    <nav class="menu_lateral">
+    <nav class="menu_lateral ">
         <img src="img/logo.svg" alt="Logotipo da HZC" class="menu_lateral_logo">
-        <a href="#" class="menu_lateral_link">Início</a>
-        <a href="#" class="menu_lateral_link">Vídeos</a>
-        <a href="#" class="menu_lateral_link">Picos</a>
-        <a href="#" class="menu_lateral_link">Integrantes</a>
-        <a href="#" class="menu_lateral_link">Camisas</a>
-        <a href="#" class="menu_lateral_link">Pinturas</a>
+        <a href="#" class="menu_lateral_link ativo inicio">Início</a>
+        <a href="#" class="menu_lateral_link videos">Vídeos</a>
+        <a href="#" class="menu_lateral_link picos">Picos</a>
+        <a href="#" class="menu_lateral_link integrantes">Integrantes</a>
+        <a href="#" class="menu_lateral_link camisas">Camisas</a>
+        <a href="#" class="menu_lateral_link pinturas">Pinturas</a>
     </nav>
+    <main class="principal">
+        <div class="conteudo">
+            <h2 class="titulo_pagina">Início</h2>
+            <article class="cartao">
+                <img src="img/banner-mobile_1.png" alt="Banner do cartao" class="imagem">
+                <div class="conteudo">
+                    <p class="destaque">Vídeo em destaque</p>
+                    <h3 class="titutlo">HZC - Título</h3>
+                    <p class="perfil">Bruno Lopez</p>
+                    <p class="info tempo">33 minutos</p>
+                    <p class="info visualizacoes">33 vizualizações</p>
+                    <button class="botao play destaque">Assistir agora</button>
+                </div>
+            </article>
+        </div>
+    </main>
+    <script src="main.js"></script>
 </body>
 </html>
