Manutenção no html e melhorando css

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <h2 class="titulo_pagina">Início</h2>
             <article class="cartao">
                 <img src="img/banner-mobile_1.png" alt="Banner do cartao" class="imagem">
-                <div class="conteudo">
-                    <p class="destaque">Vídeo em destaque</p>
-                    <h3 class="titutlo">HZC - Título</h3>
-                    <p class="perfil">Bruno Lopez</p>
-                    <p class="info tempo">33 minutos</p>
-                    <p class="info visualizacoes">33 vizualizações</p>
-                    <button class="botao play destaque">Assistir agora</button>
+                <div class="cartao_conteudo">
+                    <p class="cartao_destaque">Vídeo em destaque</p>
+                    <h3 class="cartao_titutlo">HZC - Título</h3>
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <p class="cartao_info tempo">33 minutos</p>
+                    <p class="cartao_info visualizacao">33 vizualizações</p>
+                    <button class="cartao_botao play destaque">Assistir agora</button>
                 </div>
             </article>
         </div>
