Atualização index e style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class="principal">
         <div class="conteudo">
             <h2 class="titulo_pagina">Início</h2>
-            <article class="cartao">
+            <article class="cartao cartao_destaque1">
                 <img src="img/banner-mobile_1.png" alt="Banner do cartao" class="imagem">
                 <div class="cartao_conteudo">
                     <p class="cartao_destaque">Vídeo em destaque</p>
