--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>HZC | Home</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
-
-    <title>Document</title>
 </head>
 <body>
     <header class="cabecalho">
         <button class="cabecalho_menu" aria-label="Menu"><i></i></button>
         <img src="img/logo.svg" alt="Logotipo da HZC" class="cabecalho_logo">
+        <p class="cabecalho_perfil">Bruno Lopez</p>
         <button class="cabecalho_notificacao" aria-label="Notificação"><i></i></button>
     </header>
     <nav class="menu_lateral ">
@@ -29,10 +28,10 @@
         <a href="#" class="menu_lateral_link pinturas">Pinturas</a>
     </nav>
     <main class="principal">
-        <div class="conteudo">
             <h2 class="titulo_pagina">Início</h2>
-            <article class="cartao cartao_destaque1">
-                <img src="img/banner-mobile_1.png" alt="Banner do cartao" class="imagem">
+            <article class="cartao cartao_destaque1 destaque_video">
+                <img src="img/banner-mobile_1.png" alt="Banner do cartao" class="imagem cartao_imagem_mobile">
+                <img src="img/banner_1.png" alt="Banner do cartao" class="imagem cartao_imagem_desktop">
                 <div class="cartao_conteudo">
                     <p class="cartao_destaque">Vídeo em destaque</p>
                     <h3 class="cartao_titutlo">HZC - Título</h3>
@@ -42,7 +41,159 @@
                     <button class="cartao_botao play destaque">Assistir agora</button>
                 </div>
             </article>
-        </div>
+            <article class="cartao cartao_recentes videos_recentes">
+                <h3 class="cartao_titulo">Vídeos recentes</h3>
+                <a href="#" class="cratao_link">Ver todos</a>
+                <ul class="cartao_lista">
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" 
+class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                </ul>
+            </article>
+            <section class="secao secao_videos">
+                <h3 class="titulo_secao">Vídeos mais vistos</h3>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+            </section>
+            <article class="cartao cartao_recentes produtos_recentes">
+                <h3 class="cartao_titulo">Vídeos recentes</h3>
+                <a href="#" class="cratao_link">Ver todos</a>
+                <ul class="cartao_lista">
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                    <li>
+                        <img src="img/miniatura_1.png" alt="miniatura" class="cratao_item_miniatura">
+                        <h4 class="cartao_item_titulo">HZC - Love machine</h4>
+                        <p class="cartao_item_perfil">Bruno Lopez</p>
+                    </li>
+                </ul>
+            </article>
+            <article class="cartao cartao_destaque1 destaque_produtos">
+                <img src="img/banner-mobile_2.png" alt="Banner do cartao" class="imagem cartao_imagem_mobile">
+                <img src="img/banner_2.png" alt="Banner do cartao" class="imagem cartao_imagem_desktop">
+                <div class="cartao_conteudo">
+                    <p class="cartao_destaque">Vídeo em destaque</p>
+                    <h3 class="cartao_titutlo">HZC - Título</h3>
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <p class="cartao_info tempo">33 minutos</p>
+                    <p class="cartao_info visualizacao">33 vizualizações</p>
+                    <button class="cartao_botao play destaque">Assistir agora</button>
+                </div>
+            </article>
+            <section class="secao secao_produtos">
+                <h3 class="titulo_secao">Vídeos mais vistos</h3>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+                <article class="cartao">
+                    <img src="img/video_1.png" alt="video" class="imagem">
+                    <div class="cartao_conteudo">
+                        <h3 class="cartao_titutlo">HZC - Título</h3>
+                        <p class="cartao_perfil">Bruno Lopez</p>
+                        <p class="cartao_info tempo">33 minutos</p>
+                        <button class="cartao_botao play" aria-label="Assistir agora"></button>
+                    </div>
+                </article>
+            </section>
     </main>
     <script src="main.js"></script>
 </body>
